# Traiding_platform

./: pyproject.toml
src/: base_db.py  main.py
src/auth/: utils.py
src/auth/endpoints/: base_router.py
src/auth/endpoints/all_routers/: router_balance.py  router_inventory.py  user_login.py  users.py
src/auth/models/: models.py
src/auth/schemas/: balance.py  inventory.py  schemas.py  token.py
src/auth/service/: utils.py
src/auth/service/access_token/: access_token.py  crf_token.py
src/auth/service/crud_balacne_and_inventory/: for_balance.py  for_inventory.py
src/auth/service/crud_user/: creating_balance_and_inventory.py  service.py
src/db/: config.py  database.py
src/operation_with_offer/crud_operation/item/: currency.py  item.py
src/operation_with_offer/crud_operation/offer/: offer.py  role.py
src/operation_with_offer/endpoint/: base_router.py
src/operation_with_offer/endpoint/all_router/: item.py  offer.py
src/operation_with_offer/models/: item.py  offer.py
src/operation_with_offer/schemas/item/: currency.py  item.py
src/operation_with_offer/schemas/offer/: offer.py  role.py
src/trade/: models.py  schemas.py
src/trade/enpoints/: base_router.py
src/trade/enpoints/all_routers/: enpoint.py
src/trade/service/: crud_operation.py
src/trade/service/automaticlly_creating_trade/: operation_with_trade.py
src/trade/service/automaticlly_creating_trade/creation_trade_depending_on_the_number/: if_current_iffer_has_less_shares.py  if_current_offer_and_offer_seller_have_the_same_number.py  if_current_offer_has_more_shares.py
(+2 files in other folders)
